--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -532,12 +532,6 @@ video {
 .ml-11 {
   margin-left: 2.75rem;
 }
-.ml-12 {
-  margin-left: 3rem;
-}
-.ml-9 {
-  margin-left: 2.25rem;
-}
 .ml-auto {
   margin-left: auto;
 }
@@ -573,9 +567,6 @@ video {
 }
 .mt-6 {
   margin-top: 1.5rem;
-}
-.mt-7 {
-  margin-top: 1.75rem;
 }
 .mt-8 {
   margin-top: 2rem;
@@ -624,9 +615,6 @@ video {
 }
 .w-4\/5 {
   width: 80%;
-}
-.w-40 {
-  width: 10rem;
 }
 .w-52 {
   width: 13rem;
@@ -691,9 +679,6 @@ video {
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
-}
-.gap-y-4 {
-  row-gap: 1rem;
 }
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -769,9 +754,6 @@ video {
 .p-8 {
   padding: 2rem;
 }
-.p-9 {
-  padding: 2.25rem;
-}
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -839,9 +821,6 @@ video {
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
-}
-.pb-0 {
-  padding-bottom: 0px;
 }
 .pb-10 {
   padding-bottom: 2.5rem;
@@ -1045,14 +1024,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.active\:border-none:active {
+  border-style: none;
+}
 @media (min-width: 640px) {
 
   .sm\:flex {
     display: flex;
-  }
-
-  .sm\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .sm\:px-8 {
